--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
+  margin: 16px;
   font-family: Roboto, sans-serif;
 }
 
@@ -18,13 +19,14 @@ body {
 
 .note {
   width: 100%;
-  margin: 12px auto;
+  margin: 12px 0;
+  border: black solid 1px;
+  background-color: #fcfcac;
 }
 
 .noteInput {
   width: 100%;
   height: 100%;
-  background-color: #fcfcac;
   resize: none;
   border: none;
   font-size: 20px;
