--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,15 @@ body {
   background-color: #fcfcac;
 }
 
-.noteInput {
+.noteInput, .noteTitle {
   width: 100%;
   height: 100%;
   resize: none;
   border: none;
   font-size: 20px;
-  padding: 1px;
-  margin: 0px;
   font-family: Roboto, sans-serif;
+}
+
+.noteInput {
+  border-top: black solid 1px;
 }
