--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 body {
   margin: 16px;
   font-family: Roboto, sans-serif;
+  text-align: center;
 }
 
 #createNote {
@@ -11,6 +12,7 @@ body {
   border: black solid 1px;
   border-radius: 8px;
   background-color: transparent;
+  margin-bottom: 128px;
 }
 
 #notesList {
@@ -19,16 +21,11 @@ body {
 
 .note {
   width: 100%;
+  padding: 0;
   margin: 12px 0;
-  border: black solid 1px;
-  background-color: #fcfcac;
 }
 
-.noteInput {
-  width: 100%;
-  height: 100%;
-  resize: none;
-  border: none;
-  font-size: 20px;
-  font-family: Roboto, sans-serif;
+.ce-block__content {
+  background-color: #fcfcac;
+  border: black solid 1px;
 }
