--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,7 @@ body {
 }
 
 #createNote, .noteSelector {
-  min-width: 128px;
-  max-width: 256px;
+  min-width: 256px;
   height: 32px;
   margin: 8px;
   border: black solid 1px;
@@ -35,4 +34,10 @@ body {
 
 .codex-editor__redactor {
   padding-bottom: 0px !important;
+}
+
+.ce-paragraph.cdx-block {
+  text-align: left;
+  margin-left: 8px;
+  margin-right: 8px;
 }
