--- a/styles.css
+++ b/styles.css
@@ -82,3 +82,8 @@ button {
   margin-left: 8px;
   margin-right: 8px;
 }
+
+.ce-toolbar__actions.ce-toolbar__actions--opened {
+  background-color: rgba(255, 255, 255, 0.425);
+  border-radius: 8px;
+}
